# mcpp

./: .gitignore  ChangeLog  INSTALL  INSTALL-jp  INSTALL_jpeuc  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  mcpp-gcc.1  mcpp.1  readme.md
V.2.6.1-prerelease/: INSTALL  INSTALL-jp  Makefile.am  Makefile.in  configure.ac  mcpp-gcc.1  mcpp.1
V.2.6.1-prerelease/cpp-test/test-t/: n_24_3_run.c.gcc2  n_24_3_run.c.gcc3  u_2.c
V.2.6.1-prerelease/doc/: LICENSE  cpp_test.sum  mcpp-manual.txt
V.2.6.1-prerelease/doc-jp/: mcpp-manual.txt
V.2.6.1-prerelease/noconfig/: bc40.dif  bc55.dif  cyg1518.dif  lcc38.dif  lcc_w32.mak  linux_gcc2953.dif  linux_gcc343.dif  linux_gcc402.dif  vc2002.dif  vc2003.dif
V.2.6.1-prerelease/src/: Makefile.am  Makefile.in  config.h.in  expand.c  internal.H  lib.c  noconfig.H  unset_mcpp.sh
V.2.6.1-prerelease/test-c/: u_1_22.c
V.2.6.1-prerelease/test-t/: u_1_7_utf8.t
V.2.6.1-prerelease/tests/: Makefile.am
V.2.6.2-prerelease/: Makefile.am  NEWS  aclocal.m4  configure  mcpp-gcc.1  mcpp.1
V.2.6.2-prerelease/cpp-test/test-t/: e_18_4.c  u_1_19.c
V.2.6.2-prerelease/doc/: cpp-test.html
V.2.6.2-prerelease/doc-jp/: cpp-test.html  mcpp-porting.html
V.2.6.2-prerelease/noconfig/: bc55.dif  borlandc.mak  cyg1518.dif  lcc0308.dif  lcc_w32.mak  linux_gcc332.dif  linux_gcc402.dif  mingw.mak  mingw345.dif  vc2002.dif  vc2003.dif  visualc.mak
V.2.6.2-prerelease/src/: Makefile.am  Makefile.in  lib.c  mbchar.c  system.c
V.2.6.2-prerelease/test-t/: n_std.t
config/: mkinstalldirs
cpp-test/: LICENSE
cpp-test/test-t/: e_14_10.c  e_24_5.c  e_27_6.c  e_intmax.c  e_vargs.c  i_35_3.c  n_cnvucn.C  u_1_8.c  u_2.c
doc/: LICENSE  cpp-test.html  cpp-test.txt  cpp_test.sum  example1.tex  example2.tex  graph.epsi  isomac.dif  manual.txt  mcpp-manual.html  mcpp-manual.txt  mcpp-porting.html  mcpp-porting.txt  mcpp-summary.tex  porting.txt
doc-jp/: cpp-test.html  cpp-test.txt  mcpp-manual.html  mcpp-manual.txt  mcpp-porting.html  mcpp-porting.txt
doc.eng/: cpp-test.txt  graph.epsi  manual.txt  mcpp-porting.txt  mcpp-summary.tex  porting.txt
noconfig/: bc40.dif  bc40_16l.dif  bc4_16_by_bc4_32.dif  bc55.dif  bc55_w32.dif  bc59.dif  borlandc.mak  cyg1310.dif  cyg1518.dif  cygwin.mak  djg112m4.dif  djgpp112.mak  freebsd.mak  lcc0308.dif  lcc0603.dif  lcc32.dif  lcc38.dif  lcc_w32.mak  linux.mak  linux_gcc2953.dif  linux_gcc32.dif  linux_gcc332.dif  linux_gcc336.dif  linux_gcc343.dif  linux_gcc402.dif  linux_gcc412.dif  lsi_bc55.dif  lsic33.dif  lsic33.mak  mac_gcc401_i686.dif  mac_gcc401_powerpc.dif  mac_osx.mak  mingw.mak  mingw345.dif  plan9.mk  plan9r4.dif  vc2002.dif  vc2003.dif  vc2005.dif  vc6.dif  (+1 more)
src/: Makefile.am  Makefile.in  cc1.c  config.h.in  configed.H  control.c  directive.c  eval.c  expand.c  internal.H  lib.c  main.c  mbchar.c  mcpp_lib.def  mcpp_lib.h  noconfig.H  preproc.c  set_mcpp.sh  support.c  system.H  system.c  testmain.c  unset_mcpp.sh
test-c/: e_24_5.c  e_27_6.c  i_33_big5.c  i_33_eucjp.c  i_33_gb.c  i_33_jis.c  i_33_ksc.c  i_33_sjis.c  i_33_utf8.c  i_34_big5.c  i_34_eucjp.c  i_34_gb.c  i_34_jis.c  i_34_ksc.c  i_34_sjis.c  i_34_utf8.c  i_36_big5.c  i_36_jis.c  i_36_sjis.c  m_36_big5.c  m_36_jis.c  m_36_sjis.c  n_27.c  n_i_.lst  side_cpp  u_1_7_utf8.c
test-t/: e_14_10.t  e_24_5.t  e_27_6.t  e_intmax.t  i_33_big5.t  i_33_eucjp.t  i_33_gb.t  i_33_jis.t  i_33_ksc.t  i_33_sjis.t  i_33_utf8.t  i_34_big5.t  i_34_eucjp.t  i_34_gb.t  i_34_jis.t  i_34_ksc.t  i_34_sjis.t  i_34_utf8.t  i_36_big5.t  i_36_jis.t  i_36_sjis.t  misc.t  n_37_2.t  n_37_3.t  n_37_4.t  n_37_5.t  n_37_6.t  n_37_7.t  n_37_8.t  n_37_9.t  n_std99.t  recurs.t
tests/: Makefile.am  Makefile.in  after_test.sh  set_test.sh
tool/: cpp_test.c  ins_once.c  lcc.dif  paste.0  paste.c  rm_once.c  total.c
